made tiger img so that it has a max size

--- a/myClient/mainPage/styles.css
+++ b/myClient/mainPage/styles.css
@@ -70,4 +70,6 @@ input[type="password"],
     transform: translate(-50%, -19%);
     width:22%;
     height:12%;
+    max-width: 100px;
+    max-height: 100px;
 }
